--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/thumbnails/010/178/999/small/cartoon-small-pizza-file-free-png.png" />
+    <link rel="icon" type="image/svg+xml" href="https://www.midossi.edu.it/images/loghi-midossi/logo-midossi-150-150.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizza</title>
+    <title>PizzApp</title>
   </head>
   <body>
     <div id="root"></div>
